fix(sdks): Change `type` to `primitiveType`